Fix styles (make wider, text-align right)

--- a/components/SelectWithSelect/index.scss
+++ b/components/SelectWithSelect/index.scss
@@ -11,6 +11,7 @@
 
   .SelectTrigger.Right {
     flex-grow: 0;
-    min-width: 10rem;
+    text-align: right;
+    min-width: 12rem;
   }
 }
